Sample Runtime Bundle Chart

--- a/nginx.conf
+++ b/nginx.conf
@@ -54,7 +54,7 @@ http {
 
     location / {
       root   /usr/share/nginx/html;
-      index  index.html index.htm;
+      index  index.yaml index.html index.htm;
     }
 
     #error_page  404              /404.html;
